--- a/views/play.erb
+++ b/views/play.erb
@@ -1,3 +1,7 @@
 <h1><%= @Player_1 %> vs. <%= @Player_2 %><h1>
 
 <%= @Player_2 %>: 100HP
+
+<form action="/attack">
+  <input type="submit" value="Attack!">
+</form>
