--- a/views/play.erb
+++ b/views/play.erb
@@ -1,6 +1,6 @@
-<h1><%= @Player_1 %> vs. <%= @Player_2 %><h1>
+<h1><%= $Player_1.name %> vs. <%= $Player_2.name %><h1>
 
-<%= @Player_2 %>: 100HP
+<%= $Player_2.name %>: 100HP
 
 <form action="/attack">
   <input type="submit" value="Attack!">
